@@ -1,3 +1,9 @@
+2009-10-14  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* ldlex.l (yy_input): Remove second argument and return the value
+	instead.
+	(YY_INPUT): Adjust.
+
 2009-10-14  Ryan Mansfield  <rmansfield@qnx.com>
 
 	* ldlang.c (load_symbols): Set whole_archive from entry when
